--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,9 +12,9 @@
     <color name="color_seasonal">#F44235</color>
     <color name="color_gluten">#8BC34A</color>
 
-    <color name="category_1">#FFC100</color>
-    <color name="category_2">#FD6538</color>
-    <color name="category_3">#F44235</color>
-    <color name="category_4">#8BC34A</color>
+    <color name="category_easy">#FFC100</color>
+    <color name="category_traditional">#FD6538</color>
+    <color name="category_season">#F44235</color>
+    <color name="category_gluten_free">#8BC34A</color>
 
 </resources>
