--- a/app/src/main/res/layout/item_layout_paragraph.xml
+++ b/app/src/main/res/layout/item_layout_paragraph.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container_paragraph"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView_paragraph_content"
