--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="margin_medium">16dp</dimen>
+    <dimen name="margin_small">8dp</dimen>
     <dimen name="btn_std_width">200dp</dimen>
     <dimen name="btn_std_height">120dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
