--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -17,7 +17,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tab_layout"
         android:layout_centerInParent="true"
-        android:layout_marginTop="100dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         tools:layout_editor_absoluteX="8dp" />
 </RelativeLayout>
 
