--- a/app/src/main/res/layout/fragment_recipe_steps.xml
+++ b/app/src/main/res/layout/fragment_recipe_steps.xml
@@ -20,4 +20,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fab_shopping_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_margin="@dimen/fab_margin"
+        android:onClick="fabShoppingListClicked"
+        app:srcCompat="@drawable/cart" />
 </FrameLayout>
