all activities done

--- a/app/src/main/res/layout/item_layout_ingredient.xml
+++ b/app/src/main/res/layout/item_layout_ingredient.xml
@@ -10,36 +10,32 @@
         android:id="@+id/textView_ingredient_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:textSize="18sp"
-        tools:text="[NAME]"
+        android:textColor="@color/purple_500"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-    <TextView
-        android:id="@+id/textView_ingredient_quantity_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="18sp"
-        android:text="@string/item_ingredient_quantity_label"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_ingredient_name" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="[NAME]" />
 
     <TextView
         android:id="@+id/textView_ingredient_quantity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_xs"
         android:textSize="18sp"
-        tools:text="[QUANTITY]"
-        app:layout_constraintStart_toEndOf="@+id/textView_ingredient_quantity_label"
-        app:layout_constraintTop_toTopOf="@+id/textView_ingredient_quantity_label" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_ingredient_name"
+        tools:text="[QUANTITY]" />
 
     <TextView
         android:id="@+id/textView_ingredient_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_xs"
         android:textSize="18sp"
-        tools:text="[UNIT]"
         app:layout_constraintStart_toEndOf="@+id/textView_ingredient_quantity"
-        app:layout_constraintTop_toTopOf="@+id/textView_ingredient_quantity" />
+        app:layout_constraintTop_toTopOf="@+id/textView_ingredient_quantity"
+        tools:text="[UNIT]" />
 
     <TextView
         android:id="@+id/textView_ingredient_add"
@@ -48,7 +44,7 @@
         android:textSize="18sp"
         tools:text=""
         android:fontFamily="@font/fa_solid_900"
-        android:textColor="#004581"
+        android:textColor="@color/purple_500"
         app:layout_constraintBaseline_toBaselineOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
