--- a/app/src/main/res/layout/item_layout_recipe.xml
+++ b/app/src/main/res/layout/item_layout_recipe.xml
@@ -4,17 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container_recipe"
     android:layout_width="match_parent"
-    android:layout_height="150dp">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/textView_recipe_title"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_marginStart="@dimen/margin_medium"
         android:layout_marginTop="@dimen/margin_medium"
         android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/imageView_recipe_image"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="Lorem ipsum dolor" />
 
     <ImageView
         android:id="@+id/imageView_recipe_image"
@@ -22,9 +24,9 @@
         android:layout_height="128dp"
         android:layout_marginStart="@dimen/margin_medium"
         android:layout_marginTop="@dimen/margin_medium"
-        android:layout_marginBottom="@dimen/margin_medium"
-        android:scaleType="fitXY"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:adjustViewBounds="true"
+        android:paddingBottom="@dimen/margin_medium"
+        android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:srcCompat="@tools:sample/avatars" />
@@ -34,21 +36,22 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_medium"
-        android:layout_marginBottom="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:paddingBottom="@dimen/margin_small"
         android:text="@string/txt_line_recipe_txtView_author"
         android:textSize="16dp"
-        app:layout_constraintBottom_toBottomOf="@+id/imageView_recipe_image"
-        app:layout_constraintStart_toEndOf="@+id/imageView_recipe_image" />
+        app:layout_constraintStart_toEndOf="@+id/imageView_recipe_image"
+        app:layout_constraintTop_toBottomOf="@+id/imageView_recipe_difficulty" />
 
     <ImageView
         android:id="@+id/imageView_recipe_difficulty"
         android:layout_width="100dp"
         android:layout_height="20dp"
-        android:layout_marginStart="@dimen/margin_small"
-        android:layout_marginBottom="@dimen/margin_medium"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginTop="@dimen/margin_medium"
         android:scaleType="fitXY"
-        app:layout_constraintBottom_toTopOf="@+id/textView_recipe_author"
         app:layout_constraintStart_toEndOf="@+id/imageView_recipe_image"
+        app:layout_constraintTop_toBottomOf="@+id/textView_recipe_title"
         tools:srcCompat="@tools:sample/avatars" />
 
 
