--- a/app/src/main/res/values/dimensions.xml
+++ b/app/src/main/res/values/dimensions.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="margin_medium">16dp</dimen>
     <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_xs">4dp</dimen>
     <dimen name="btn_std_width">200dp</dimen>
     <dimen name="btn_std_height">120dp</dimen>
     <!-- Default screen margins, per the Android Design guidelines. -->
@@ -10,4 +11,9 @@
     <dimen name="appbar_padding">16dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="appbar_padding_top">8dp</dimen>
+    <dimen name="text_s">11sp</dimen>
+    <dimen name="text_m">14sp</dimen>
+    <dimen name="text_l">18sp</dimen>
+    <dimen name="text_xl">24sp</dimen>
+    <dimen name="text_xxl">32sp</dimen>
 </resources>
